# billet

./: .gitignore  CLAUDE.md  FAVICON_INJECTION.md  Makefile  README.md  config.example.toml  mkdocs.yml  pyproject.toml  renovate.json
.claude/: canon.txt  settings.json
.devcontainer/: .env.example  Dockerfile  authorized_keys-stub  dev-entrypoint.sh  devcontainer.json  docker-compose.yml  sshd.conf
.github/workflows/: ci.yml  docs.yml
brand/: BRAND.md  README.md  guidelines.html
brand/assets/: brand.css
docs/: adopting-a-repo.md  index.md
docs/adr/: adr-0001-closed-architecture-decomposition.md  adr-0002-workspace-subsystem.md  adr-0003-workspace-port-binding-contract.md  adr-0004-host-manages-workspaces.md  adr-0005-instance-lifecycle-ownership.md  adr-0006-claude-token-injection.md  adr-0007-source-fast-forward-on-start.md
overrides/: main.html
scripts/devbox/: config.example.sh  config.sh  connect-host.sh  connect.sh  install-ssh-config.sh  lib.sh  pin-ip.sh  rebuild.sh  stop.sh  up.sh
src/billet/: __init__.py
src/billet/access/: __init__.py
src/billet/access/container/: __init__.py  compose_container_access.py
src/billet/access/host/: __init__.py  azure_vm_provider.py
src/billet/access/metrics/: __init__.py  ssh_metrics_access.py
src/billet/access/registry/: __init__.py  toml_registry_access.py
src/billet/access/secret/: __init__.py  claude_token_access.py
src/billet/access/source/: __init__.py  git_source_access.py
src/billet/access/sshconfig/: __init__.py  file_ssh_config_access.py
src/billet/cli/: __init__.py  _console.py  _planio.py  _ui.py  app.py  host_commands.py  workspace_commands.py
src/billet/contracts/: __init__.py  config.py  host.py  metrics.py  plan.py  workspace.py
src/billet/host/: __init__.py
src/billet/host/manager/: __init__.py  host_manager.py
src/billet/infrastructure/: __init__.py  az.py  process.py  ssh.py
src/billet/shared/: __init__.py  errors.py  jsonc.py  paths.py
src/billet/workspace/: __init__.py
src/billet/workspace/engine/: __init__.py  placement.py  port_allocator.py  ssh_config_engine.py  tmux_status_engine.py
src/billet/workspace/manager/: __init__.py  workspace_manager.py
templates/workspace/: Dockerfile.snippet  README.md  dev-entrypoint.sh  docker-compose.snippet.yml  env.example  sshd.conf
tests/integration/: __init__.py  conftest.py  test_two_repo_reachability.py
tests/integration/source/: __init__.py  conftest.py  test_clone_script_fast_forward.py
tests/meta/: test_canon_adoption.py
tests/unit/: _fakes.py
tests/unit/access/container/: __init__.py  test_compose_container_access.py
tests/unit/access/host/: test_azure_vm_provider.py
tests/unit/cli/: test_app.py  test_console.py  test_host_commands.py  test_ui.py  test_workspace_commands.py
tests/unit/contracts/: test_plan.py
tests/unit/host/: test_host_manager.py
tests/unit/infrastructure/: test_process.py  test_ssh.py
tests/unit/shared/: test_jsonc.py  test_paths.py
tests/unit/workspace/: __init__.py  test_placement.py  test_port_allocator.py  test_ssh_config_engine.py  test_tmux_status_engine.py  test_workspace_manager.py
(+9 files in other folders)
